syntax = "proto3";

package chat.v1;

option go_package = "github.com/Dorazi23/gRPC_Chat_Project/pkg/chatpb;chatpb";

// 채팅 메시지 정의
message ChatMessage {
  string roomid = 1;    // 채팅방 ID
  string username = 2;  // 사용자 이름
  string message = 3;   // 메시지 내용
}

// 방 ID 요청 메시지
message GetRoomIDRequest {
  string my_id = 1;     // 내 아이디
  string other_id = 2;  // 대화할 상대방 아이디
}

// 방 ID 응답 메시지
message GetRoomIDResponse {
  string room_id = 1;   // 계산된 방 ID (예: hun_min)
}

// [추가] 내 채팅방 목록 요청
message GetMyRoomsRequest {
  string user_id = 1; // 내 아이디 (로그인한 사용자)
}

// [추가] 채팅방 정보 구조체
message ChatRoomInfo {
  string room_id = 1;
  string other_user_id = 2; // 상대방 아이디 (프론트에 보여줄 용도)
}

// [추가] 내 채팅방 목록 응답
message GetMyRoomsResponse {
  repeated ChatRoomInfo rooms = 1;
}

// 채팅 서비스 정의
service ChatService {
  // 양방향 스트리밍 RPC
  rpc JoinChat(stream ChatMessage) returns (stream ChatMessage);

  // 방 ID 발급 API
  rpc GetRoomID(GetRoomIDRequest) returns (GetRoomIDResponse);

  // [추가] 내 채팅방 목록 조회 API
  rpc GetMyRooms(GetMyRoomsRequest) returns (GetMyRoomsResponse);
}